# OpencvTestDemo

./: .clang-format
OpencvFindContoursDemo/: .gitignore  CMakeLists.txt  CMakeSettings.json  requires.txt  sqlite3.lib
OpencvFindContoursDemo/src/: CMakeLists.txt  main.cpp  src.cmake
OpencvFindContoursDemo/src/FindContoursDemo/: DataBaseSQLite.h  FindContoursDemo.cmake  IVSUserManageData.cpp  IVSUserManageData.h  TestblobAnalyzer.cpp  TestblobAnalyzer.h  TestblobAnalyzer.ui  UserManagerSystemDataBase.cpp  UserManagerSystemDataBase.h  widget.cpp  widget.h
